syntax = "proto3";

package pbft;

import "google/protobuf/timestamp.proto";

message ViewChangeEntry {
  int64 height = 1;
  int64 view = 2;
  string validator = 3;
  string signature = 4;
}

message AbstractMessage {
  string type = 1;
  int64 height = 2;
  int64 round = 3;
  int64 view = 4;
  google.protobuf.Timestamp timestamp = 5;
  string block_hash = 6;
  string prev_hash = 7;
  string proposer = 8;
  string validator = 9;
  string signature = 10;
  repeated string commit_seals = 11;
  repeated ViewChangeEntry view_changes = 12;
  map<string, bytes> extras = 13;
  bytes rawPayload = 14;
  string payload = 15;
}

